# toyc_compiler

./: .gitignore  LICENSE  README.md  dune-project  toyc_compiler.opam
lib/: IrToAsm.ml  ast.ml  astToIR.ml  cfg.ml  dune  ir.ml  lexer.mll  optimazation.ml  parser.mly  print_ast.ml  print_ir.ml
test/: 1.s  1.txt  block.tc  checked.tc  dune  fib.s  fib.tc  fib2.s  func.tc  temp.s  test.tc
