(lang dune 3.17)

(name toyc_compiler)

(generate_opam_files true)

(map_workspace_root false)

(source
 (github username/reponame))

(authors "Grl Wb Ak Zb")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name toyc_compiler)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
